src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    T_ELIF

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     statement -> expression T_FINDELINEA
Rule 5     statement -> assignment T_FINDELINEA
Rule 6     statement -> declaration T_FINDELINEA
Rule 7     statement -> conditional T_FINDELINEA
Rule 8     statement -> loop_while T_FINDELINEA
Rule 9     statement -> loop_for T_FINDELINEA
Rule 10    statement -> loop_do_while T_FINDELINEA
Rule 11    statement -> function_declaration T_FINDELINEA
Rule 12    statement -> return_statement T_FINDELINEA
Rule 13    statement -> break_statement T_FINDELINEA
Rule 14    statement -> statement_print T_FINDELINEA
Rule 15    expression -> term
Rule 16    expression -> expression T_SUMA term
Rule 17    expression -> expression T_RESTA term
Rule 18    expression -> expression T_MULTIPLICACION term
Rule 19    expression -> expression T_DIVISION term
Rule 20    expression -> expression T_MAYORQUE expression
Rule 21    expression -> expression T_MENORQUE expression
Rule 22    expression -> expression T_MAYOROIGUAL expression
Rule 23    expression -> expression T_MENOROIGUAL expression
Rule 24    expression -> expression T_IGUAL expression
Rule 25    expression -> expression T_DIFERENTE expression
Rule 26    expression -> T_NOT expression
Rule 27    expression -> expression T_AND expression
Rule 28    expression -> expression T_OR expression
Rule 29    term -> T_NUMERO
Rule 30    term -> T_VARIABLE
Rule 31    term -> T_TRUE
Rule 32    term -> T_FALSE
Rule 33    term -> T_STRING
Rule 34    term -> rank_function
Rule 35    assignment -> T_VARIABLE T_ASIGNACION expression
Rule 36    declaration -> T_ENTERO assignment
Rule 37    declaration -> T_FLOTANTE assignment
Rule 38    declaration -> T_BOOL assignment
Rule 39    declaration -> T_CADENA assignment
Rule 40    declaration -> T_ENTERO T_VARIABLE
Rule 41    declaration -> T_FLOTANTE T_VARIABLE
Rule 42    declaration -> T_BOOL T_VARIABLE
Rule 43    declaration -> T_CADENA T_VARIABLE
Rule 44    conditional -> T_IF T_PDERECHA expression T_PIZQUIERDA T_LLAVEIZQUIERDA statement_list T_LLAVEDERECHA
Rule 45    conditional -> T_IF T_PDERECHA expression T_PIZQUIERDA T_LLAVEIZQUIERDA statement_list T_LLAVEDERECHA T_ELSE T_LLAVEIZQUIERDA statement_list T_LLAVEDERECHA
Rule 46    loop_while -> T_WHILE T_PDERECHA expression T_PIZQUIERDA T_LLAVEIZQUIERDA statement_list T_LLAVEDERECHA
Rule 47    rank_function -> T_RANK T_PDERECHA expression T_COMA expression T_COMA expression T_PIZQUIERDA
Rule 48    loop_for -> T_FOR T_VARIABLE T_IN rank_function T_LLAVEIZQUIERDA statement_list T_LLAVEDERECHA
Rule 49    loop_do_while -> T_DO T_LLAVEIZQUIERDA statement_list T_LLAVEDERECHA T_WHILE T_PDERECHA expression T_PIZQUIERDA
Rule 50    parameter_list -> T_VARIABLE
Rule 51    parameter_list -> parameter_list T_COMA T_VARIABLE
Rule 52    function_declaration -> T_FUNCION T_PDERECHA parameter_list T_PIZQUIERDA T_LLAVEIZQUIERDA statement_list T_LLAVEDERECHA
Rule 53    return_statement -> T_RETURN expression
Rule 54    return_statement -> T_RETURN
Rule 55    statement_print -> T_PRINT T_PDERECHA expression T_PIZQUIERDA
Rule 56    break_statement -> T_BREAK

Terminals, with rules where they appear

T_AND                : 27
T_ASIGNACION         : 35
T_BOOL               : 38 42
T_BREAK              : 56
T_CADENA             : 39 43
T_COMA               : 47 47 51
T_DIFERENTE          : 25
T_DIVISION           : 19
T_DO                 : 49
T_ELIF               : 
T_ELSE               : 45
T_ENTERO             : 36 40
T_FALSE              : 32
T_FINDELINEA         : 4 5 6 7 8 9 10 11 12 13 14
T_FLOTANTE           : 37 41
T_FOR                : 48
T_FUNCION            : 52
T_IF                 : 44 45
T_IGUAL              : 24
T_IN                 : 48
T_LLAVEDERECHA       : 44 45 45 46 48 49 52
T_LLAVEIZQUIERDA     : 44 45 45 46 48 49 52
T_MAYOROIGUAL        : 22
T_MAYORQUE           : 20
T_MENOROIGUAL        : 23
T_MENORQUE           : 21
T_MULTIPLICACION     : 18
T_NOT                : 26
T_NUMERO             : 29
T_OR                 : 28
T_PDERECHA           : 44 45 46 47 49 52 55
T_PIZQUIERDA         : 44 45 46 47 49 52 55
T_PRINT              : 55
T_RANK               : 47
T_RESTA              : 17
T_RETURN             : 53 54
T_STRING             : 33
T_SUMA               : 16
T_TRUE               : 31
T_VARIABLE           : 30 35 40 41 42 43 48 50 51
T_WHILE              : 46 49
error                : 

Nonterminals, with rules where they appear

assignment           : 5 36 37 38 39
break_statement      : 13
conditional          : 7
declaration          : 6
expression           : 4 16 17 18 19 20 20 21 21 22 22 23 23 24 24 25 25 26 27 27 28 28 35 44 45 46 47 47 47 49 53 55
function_declaration : 11
loop_do_while        : 10
loop_for             : 9
loop_while           : 8
parameter_list       : 51 52
program              : 0
rank_function        : 34 48
return_statement     : 12
statement            : 2 3
statement_list       : 1 2 44 45 45 46 48 49 52
statement_print      : 14
term                 : 15 16 17 18 19

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (4) statement -> . expression T_FINDELINEA
    (5) statement -> . assignment T_FINDELINEA
    (6) statement -> . declaration T_FINDELINEA
    (7) statement -> . conditional T_FINDELINEA
    (8) statement -> . loop_while T_FINDELINEA
    (9) statement -> . loop_for T_FINDELINEA
    (10) statement -> . loop_do_while T_FINDELINEA
    (11) statement -> . function_declaration T_FINDELINEA
    (12) statement -> . return_statement T_FINDELINEA
    (13) statement -> . break_statement T_FINDELINEA
    (14) statement -> . statement_print T_FINDELINEA
    (15) expression -> . term
    (16) expression -> . expression T_SUMA term
    (17) expression -> . expression T_RESTA term
    (18) expression -> . expression T_MULTIPLICACION term
    (19) expression -> . expression T_DIVISION term
    (20) expression -> . expression T_MAYORQUE expression
    (21) expression -> . expression T_MENORQUE expression
    (22) expression -> . expression T_MAYOROIGUAL expression
    (23) expression -> . expression T_MENOROIGUAL expression
    (24) expression -> . expression T_IGUAL expression
    (25) expression -> . expression T_DIFERENTE expression
    (26) expression -> . T_NOT expression
    (27) expression -> . expression T_AND expression
    (28) expression -> . expression T_OR expression
    (35) assignment -> . T_VARIABLE T_ASIGNACION expression
    (36) declaration -> . T_ENTERO assignment
    (37) declaration -> . T_FLOTANTE assignment
    (38) declaration -> . T_BOOL assignment
    (39) declaration -> . T_CADENA assignment
    (40) declaration -> . T_ENTERO T_VARIABLE
    (41) declaration -> . T_FLOTANTE T_VARIABLE
    (42) declaration -> . T_BOOL T_VARIABLE
    (43) declaration -> . T_CADENA T_VARIABLE
    (44) conditional -> . T_IF T_PDERECHA expression T_PIZQUIERDA T_LLAVEIZQUIERDA statement_list T_LLAVEDERECHA
    (45) conditional -> . T_IF T_PDERECHA expression T_PIZQUIERDA T_LLAVEIZQUIERDA statement_list T_LLAVEDERECHA T_ELSE T_LLAVEIZQUIERDA statement_list T_LLAVEDERECHA
    (46) loop_while -> . T_WHILE T_PDERECHA expression T_PIZQUIERDA T_LLAVEIZQUIERDA statement_list T_LLAVEDERECHA
    (48) loop_for -> . T_FOR T_VARIABLE T_IN rank_function T_LLAVEIZQUIERDA statement_list T_LLAVEDERECHA
    (49) loop_do_while -> . T_DO T_LLAVEIZQUIERDA statement_list T_LLAVEDERECHA T_WHILE T_PDERECHA expression T_PIZQUIERDA
    (52) function_declaration -> . T_FUNCION T_PDERECHA parameter_list T_PIZQUIERDA T_LLAVEIZQUIERDA statement_list T_LLAVEDERECHA
    (53) return_statement -> . T_RETURN expression
    (54) return_statement -> . T_RETURN
    (56) break_statement -> . T_BREAK
    (55) statement_print -> . T_PRINT T_PDERECHA expression T_PIZQUIERDA
    (29) term -> . T_NUMERO
    (30) term -> . T_VARIABLE
    (31) term -> . T_TRUE
    (32) term -> . T_FALSE
    (33) term -> . T_STRING
    (34) term -> . rank_function
    (47) rank_function -> . T_RANK T_PDERECHA expression T_COMA expression T_COMA expression T_PIZQUIERDA

    T_NOT           shift and go to state 16
    T_VARIABLE      shift and go to state 17
    T_ENTERO        shift and go to state 18
    T_FLOTANTE      shift and go to state 19
    T_BOOL          shift and go to state 20
    T_CADENA        shift and go to state 21
    T_IF            shift and go to state 22
    T_WHILE         shift and go to state 23
    T_FOR           shift and go to state 24
    T_DO            shift and go to state 26
    T_FUNCION       shift and go to state 27
    T_RETURN        shift and go to state 28
    T_BREAK         shift and go to state 29
    T_PRINT         shift and go to state 30
    T_NUMERO        shift and go to state 31
    T_TRUE          shift and go to state 32
    T_FALSE         shift and go to state 33
    T_STRING        shift and go to state 34
    T_RANK          shift and go to state 35

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    expression                     shift and go to state 4
    assignment                     shift and go to state 5
    declaration                    shift and go to state 6
    conditional                    shift and go to state 7
    loop_while                     shift and go to state 8
    loop_for                       shift and go to state 9
    loop_do_while                  shift and go to state 10
    function_declaration           shift and go to state 11
    return_statement               shift and go to state 12
    break_statement                shift and go to state 13
    statement_print                shift and go to state 14
    term                           shift and go to state 15
    rank_function                  shift and go to state 25

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . statement
    (4) statement -> . expression T_FINDELINEA
    (5) statement -> . assignment T_FINDELINEA
    (6) statement -> . declaration T_FINDELINEA
    (7) statement -> . conditional T_FINDELINEA
    (8) statement -> . loop_while T_FINDELINEA
    (9) statement -> . loop_for T_FINDELINEA
    (10) statement -> . loop_do_while T_FINDELINEA
    (11) statement -> . function_declaration T_FINDELINEA
    (12) statement -> . return_statement T_FINDELINEA
    (13) statement -> . break_statement T_FINDELINEA
    (14) statement -> . statement_print T_FINDELINEA
    (15) expression -> . term
    (16) expression -> . expression T_SUMA term
    (17) expression -> . expression T_RESTA term
    (18) expression -> . expression T_MULTIPLICACION term
    (19) expression -> . expression T_DIVISION term
    (20) expression -> . expression T_MAYORQUE expression
    (21) expression -> . expression T_MENORQUE expression
    (22) expression -> . expression T_MAYOROIGUAL expression
    (23) expression -> . expression T_MENOROIGUAL expression
    (24) expression -> . expression T_IGUAL expression
    (25) expression -> . expression T_DIFERENTE expression
    (26) expression -> . T_NOT expression
    (27) expression -> . expression T_AND expression
    (28) expression -> . expression T_OR expression
    (35) assignment -> . T_VARIABLE T_ASIGNACION expression
    (36) declaration -> . T_ENTERO assignment
    (37) declaration -> . T_FLOTANTE assignment
    (38) declaration -> . T_BOOL assignment
    (39) declaration -> . T_CADENA assignment
    (40) declaration -> . T_ENTERO T_VARIABLE
    (41) declaration -> . T_FLOTANTE T_VARIABLE
    (42) declaration -> . T_BOOL T_VARIABLE
    (43) declaration -> . T_CADENA T_VARIABLE
    (44) conditional -> . T_IF T_PDERECHA expression T_PIZQUIERDA T_LLAVEIZQUIERDA statement_list T_LLAVEDERECHA
    (45) conditional -> . T_IF T_PDERECHA expression T_PIZQUIERDA T_LLAVEIZQUIERDA statement_list T_LLAVEDERECHA T_ELSE T_LLAVEIZQUIERDA statement_list T_LLAVEDERECHA
    (46) loop_while -> . T_WHILE T_PDERECHA expression T_PIZQUIERDA T_LLAVEIZQUIERDA statement_list T_LLAVEDERECHA
    (48) loop_for -> . T_FOR T_VARIABLE T_IN rank_function T_LLAVEIZQUIERDA statement_list T_LLAVEDERECHA
    (49) loop_do_while -> . T_DO T_LLAVEIZQUIERDA statement_list T_LLAVEDERECHA T_WHILE T_PDERECHA expression T_PIZQUIERDA
    (52) function_declaration -> . T_FUNCION T_PDERECHA parameter_list T_PIZQUIERDA T_LLAVEIZQUIERDA statement_list T_LLAVEDERECHA
    (53) return_statement -> . T_RETURN expression
    (54) return_statement -> . T_RETURN
    (56) break_statement -> . T_BREAK
    (55) statement_print -> . T_PRINT T_PDERECHA expression T_PIZQUIERDA
    (29) term -> . T_NUMERO
    (30) term -> . T_VARIABLE
    (31) term -> . T_TRUE
    (32) term -> . T_FALSE
    (33) term -> . T_STRING
    (34) term -> . rank_function
    (47) rank_function -> . T_RANK T_PDERECHA expression T_COMA expression T_COMA expression T_PIZQUIERDA

    $end            reduce using rule 1 (program -> statement_list .)
    T_NOT           shift and go to state 16
    T_VARIABLE      shift and go to state 17
    T_ENTERO        shift and go to state 18
    T_FLOTANTE      shift and go to state 19
    T_BOOL          shift and go to state 20
    T_CADENA        shift and go to state 21
    T_IF            shift and go to state 22
    T_WHILE         shift and go to state 23
    T_FOR           shift and go to state 24
    T_DO            shift and go to state 26
    T_FUNCION       shift and go to state 27
    T_RETURN        shift and go to state 28
    T_BREAK         shift and go to state 29
    T_PRINT         shift and go to state 30
    T_NUMERO        shift and go to state 31
    T_TRUE          shift and go to state 32
    T_FALSE         shift and go to state 33
    T_STRING        shift and go to state 34
    T_RANK          shift and go to state 35

    statement                      shift and go to state 36
    expression                     shift and go to state 4
    assignment                     shift and go to state 5
    declaration                    shift and go to state 6
    conditional                    shift and go to state 7
    loop_while                     shift and go to state 8
    loop_for                       shift and go to state 9
    loop_do_while                  shift and go to state 10
    function_declaration           shift and go to state 11
    return_statement               shift and go to state 12
    break_statement                shift and go to state 13
    statement_print                shift and go to state 14
    term                           shift and go to state 15
    rank_function                  shift and go to state 25

state 3

    (3) statement_list -> statement .

    T_NOT           reduce using rule 3 (statement_list -> statement .)
    T_VARIABLE      reduce using rule 3 (statement_list -> statement .)
    T_ENTERO        reduce using rule 3 (statement_list -> statement .)
    T_FLOTANTE      reduce using rule 3 (statement_list -> statement .)
    T_BOOL          reduce using rule 3 (statement_list -> statement .)
    T_CADENA        reduce using rule 3 (statement_list -> statement .)
    T_IF            reduce using rule 3 (statement_list -> statement .)
    T_WHILE         reduce using rule 3 (statement_list -> statement .)
    T_FOR           reduce using rule 3 (statement_list -> statement .)
    T_DO            reduce using rule 3 (statement_list -> statement .)
    T_FUNCION       reduce using rule 3 (statement_list -> statement .)
    T_RETURN        reduce using rule 3 (statement_list -> statement .)
    T_BREAK         reduce using rule 3 (statement_list -> statement .)
    T_PRINT         reduce using rule 3 (statement_list -> statement .)
    T_NUMERO        reduce using rule 3 (statement_list -> statement .)
    T_TRUE          reduce using rule 3 (statement_list -> statement .)
    T_FALSE         reduce using rule 3 (statement_list -> statement .)
    T_STRING        reduce using rule 3 (statement_list -> statement .)
    T_RANK          reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)
    T_LLAVEDERECHA  reduce using rule 3 (statement_list -> statement .)


state 4

    (4) statement -> expression . T_FINDELINEA
    (16) expression -> expression . T_SUMA term
    (17) expression -> expression . T_RESTA term
    (18) expression -> expression . T_MULTIPLICACION term
    (19) expression -> expression . T_DIVISION term
    (20) expression -> expression . T_MAYORQUE expression
    (21) expression -> expression . T_MENORQUE expression
    (22) expression -> expression . T_MAYOROIGUAL expression
    (23) expression -> expression . T_MENOROIGUAL expression
    (24) expression -> expression . T_IGUAL expression
    (25) expression -> expression . T_DIFERENTE expression
    (27) expression -> expression . T_AND expression
    (28) expression -> expression . T_OR expression

    T_FINDELINEA    shift and go to state 37
    T_SUMA          shift and go to state 38
    T_RESTA         shift and go to state 39
    T_MULTIPLICACION shift and go to state 40
    T_DIVISION      shift and go to state 41
    T_MAYORQUE      shift and go to state 42
    T_MENORQUE      shift and go to state 43
    T_MAYOROIGUAL   shift and go to state 44
    T_MENOROIGUAL   shift and go to state 45
    T_IGUAL         shift and go to state 46
    T_DIFERENTE     shift and go to state 47
    T_AND           shift and go to state 48
    T_OR            shift and go to state 49


state 5

    (5) statement -> assignment . T_FINDELINEA

    T_FINDELINEA    shift and go to state 50


state 6

    (6) statement -> declaration . T_FINDELINEA

    T_FINDELINEA    shift and go to state 51


state 7

    (7) statement -> conditional . T_FINDELINEA

    T_FINDELINEA    shift and go to state 52


state 8

    (8) statement -> loop_while . T_FINDELINEA

    T_FINDELINEA    shift and go to state 53


state 9

    (9) statement -> loop_for . T_FINDELINEA

    T_FINDELINEA    shift and go to state 54


state 10

    (10) statement -> loop_do_while . T_FINDELINEA

    T_FINDELINEA    shift and go to state 55


state 11

    (11) statement -> function_declaration . T_FINDELINEA

    T_FINDELINEA    shift and go to state 56


state 12

    (12) statement -> return_statement . T_FINDELINEA

    T_FINDELINEA    shift and go to state 57


state 13

    (13) statement -> break_statement . T_FINDELINEA

    T_FINDELINEA    shift and go to state 58


state 14

    (14) statement -> statement_print . T_FINDELINEA

    T_FINDELINEA    shift and go to state 59


state 15

    (15) expression -> term .

    T_FINDELINEA    reduce using rule 15 (expression -> term .)
    T_SUMA          reduce using rule 15 (expression -> term .)
    T_RESTA         reduce using rule 15 (expression -> term .)
    T_MULTIPLICACION reduce using rule 15 (expression -> term .)
    T_DIVISION      reduce using rule 15 (expression -> term .)
    T_MAYORQUE      reduce using rule 15 (expression -> term .)
    T_MENORQUE      reduce using rule 15 (expression -> term .)
    T_MAYOROIGUAL   reduce using rule 15 (expression -> term .)
    T_MENOROIGUAL   reduce using rule 15 (expression -> term .)
    T_IGUAL         reduce using rule 15 (expression -> term .)
    T_DIFERENTE     reduce using rule 15 (expression -> term .)
    T_AND           reduce using rule 15 (expression -> term .)
    T_OR            reduce using rule 15 (expression -> term .)
    T_PIZQUIERDA    reduce using rule 15 (expression -> term .)
    T_COMA          reduce using rule 15 (expression -> term .)


state 16

    (26) expression -> T_NOT . expression
    (15) expression -> . term
    (16) expression -> . expression T_SUMA term
    (17) expression -> . expression T_RESTA term
    (18) expression -> . expression T_MULTIPLICACION term
    (19) expression -> . expression T_DIVISION term
    (20) expression -> . expression T_MAYORQUE expression
    (21) expression -> . expression T_MENORQUE expression
    (22) expression -> . expression T_MAYOROIGUAL expression
    (23) expression -> . expression T_MENOROIGUAL expression
    (24) expression -> . expression T_IGUAL expression
    (25) expression -> . expression T_DIFERENTE expression
    (26) expression -> . T_NOT expression
    (27) expression -> . expression T_AND expression
    (28) expression -> . expression T_OR expression
    (29) term -> . T_NUMERO
    (30) term -> . T_VARIABLE
    (31) term -> . T_TRUE
    (32) term -> . T_FALSE
    (33) term -> . T_STRING
    (34) term -> . rank_function
    (47) rank_function -> . T_RANK T_PDERECHA expression T_COMA expression T_COMA expression T_PIZQUIERDA

    T_NOT           shift and go to state 16
    T_NUMERO        shift and go to state 31
    T_VARIABLE      shift and go to state 61
    T_TRUE          shift and go to state 32
    T_FALSE         shift and go to state 33
    T_STRING        shift and go to state 34
    T_RANK          shift and go to state 35

    expression                     shift and go to state 60
    term                           shift and go to state 15
    rank_function                  shift and go to state 25

state 17

    (35) assignment -> T_VARIABLE . T_ASIGNACION expression
    (30) term -> T_VARIABLE .

    T_ASIGNACION    shift and go to state 62
    T_FINDELINEA    reduce using rule 30 (term -> T_VARIABLE .)
    T_SUMA          reduce using rule 30 (term -> T_VARIABLE .)
    T_RESTA         reduce using rule 30 (term -> T_VARIABLE .)
    T_MULTIPLICACION reduce using rule 30 (term -> T_VARIABLE .)
    T_DIVISION      reduce using rule 30 (term -> T_VARIABLE .)
    T_MAYORQUE      reduce using rule 30 (term -> T_VARIABLE .)
    T_MENORQUE      reduce using rule 30 (term -> T_VARIABLE .)
    T_MAYOROIGUAL   reduce using rule 30 (term -> T_VARIABLE .)
    T_MENOROIGUAL   reduce using rule 30 (term -> T_VARIABLE .)
    T_IGUAL         reduce using rule 30 (term -> T_VARIABLE .)
    T_DIFERENTE     reduce using rule 30 (term -> T_VARIABLE .)
    T_AND           reduce using rule 30 (term -> T_VARIABLE .)
    T_OR            reduce using rule 30 (term -> T_VARIABLE .)


state 18

    (36) declaration -> T_ENTERO . assignment
    (40) declaration -> T_ENTERO . T_VARIABLE
    (35) assignment -> . T_VARIABLE T_ASIGNACION expression

    T_VARIABLE      shift and go to state 64

    assignment                     shift and go to state 63

state 19

    (37) declaration -> T_FLOTANTE . assignment
    (41) declaration -> T_FLOTANTE . T_VARIABLE
    (35) assignment -> . T_VARIABLE T_ASIGNACION expression

    T_VARIABLE      shift and go to state 66

    assignment                     shift and go to state 65

state 20

    (38) declaration -> T_BOOL . assignment
    (42) declaration -> T_BOOL . T_VARIABLE
    (35) assignment -> . T_VARIABLE T_ASIGNACION expression

    T_VARIABLE      shift and go to state 68

    assignment                     shift and go to state 67

state 21

    (39) declaration -> T_CADENA . assignment
    (43) declaration -> T_CADENA . T_VARIABLE
    (35) assignment -> . T_VARIABLE T_ASIGNACION expression

    T_VARIABLE      shift and go to state 70

    assignment                     shift and go to state 69

state 22

    (44) conditional -> T_IF . T_PDERECHA expression T_PIZQUIERDA T_LLAVEIZQUIERDA statement_list T_LLAVEDERECHA
    (45) conditional -> T_IF . T_PDERECHA expression T_PIZQUIERDA T_LLAVEIZQUIERDA statement_list T_LLAVEDERECHA T_ELSE T_LLAVEIZQUIERDA statement_list T_LLAVEDERECHA

    T_PDERECHA      shift and go to state 71


state 23

    (46) loop_while -> T_WHILE . T_PDERECHA expression T_PIZQUIERDA T_LLAVEIZQUIERDA statement_list T_LLAVEDERECHA

    T_PDERECHA      shift and go to state 72


state 24

    (48) loop_for -> T_FOR . T_VARIABLE T_IN rank_function T_LLAVEIZQUIERDA statement_list T_LLAVEDERECHA

    T_VARIABLE      shift and go to state 73


state 25

    (34) term -> rank_function .

    T_FINDELINEA    reduce using rule 34 (term -> rank_function .)
    T_SUMA          reduce using rule 34 (term -> rank_function .)
    T_RESTA         reduce using rule 34 (term -> rank_function .)
    T_MULTIPLICACION reduce using rule 34 (term -> rank_function .)
    T_DIVISION      reduce using rule 34 (term -> rank_function .)
    T_MAYORQUE      reduce using rule 34 (term -> rank_function .)
    T_MENORQUE      reduce using rule 34 (term -> rank_function .)
    T_MAYOROIGUAL   reduce using rule 34 (term -> rank_function .)
    T_MENOROIGUAL   reduce using rule 34 (term -> rank_function .)
    T_IGUAL         reduce using rule 34 (term -> rank_function .)
    T_DIFERENTE     reduce using rule 34 (term -> rank_function .)
    T_AND           reduce using rule 34 (term -> rank_function .)
    T_OR            reduce using rule 34 (term -> rank_function .)
    T_PIZQUIERDA    reduce using rule 34 (term -> rank_function .)
    T_COMA          reduce using rule 34 (term -> rank_function .)


state 26

    (49) loop_do_while -> T_DO . T_LLAVEIZQUIERDA statement_list T_LLAVEDERECHA T_WHILE T_PDERECHA expression T_PIZQUIERDA

    T_LLAVEIZQUIERDA shift and go to state 74


state 27

    (52) function_declaration -> T_FUNCION . T_PDERECHA parameter_list T_PIZQUIERDA T_LLAVEIZQUIERDA statement_list T_LLAVEDERECHA

    T_PDERECHA      shift and go to state 75


state 28

    (53) return_statement -> T_RETURN . expression
    (54) return_statement -> T_RETURN .
    (15) expression -> . term
    (16) expression -> . expression T_SUMA term
    (17) expression -> . expression T_RESTA term
    (18) expression -> . expression T_MULTIPLICACION term
    (19) expression -> . expression T_DIVISION term
    (20) expression -> . expression T_MAYORQUE expression
    (21) expression -> . expression T_MENORQUE expression
    (22) expression -> . expression T_MAYOROIGUAL expression
    (23) expression -> . expression T_MENOROIGUAL expression
    (24) expression -> . expression T_IGUAL expression
    (25) expression -> . expression T_DIFERENTE expression
    (26) expression -> . T_NOT expression
    (27) expression -> . expression T_AND expression
    (28) expression -> . expression T_OR expression
    (29) term -> . T_NUMERO
    (30) term -> . T_VARIABLE
    (31) term -> . T_TRUE
    (32) term -> . T_FALSE
    (33) term -> . T_STRING
    (34) term -> . rank_function
    (47) rank_function -> . T_RANK T_PDERECHA expression T_COMA expression T_COMA expression T_PIZQUIERDA

    T_FINDELINEA    reduce using rule 54 (return_statement -> T_RETURN .)
    T_NOT           shift and go to state 16
    T_NUMERO        shift and go to state 31
    T_VARIABLE      shift and go to state 61
    T_TRUE          shift and go to state 32
    T_FALSE         shift and go to state 33
    T_STRING        shift and go to state 34
    T_RANK          shift and go to state 35

    expression                     shift and go to state 76
    term                           shift and go to state 15
    rank_function                  shift and go to state 25

state 29

    (56) break_statement -> T_BREAK .

    T_FINDELINEA    reduce using rule 56 (break_statement -> T_BREAK .)


state 30

    (55) statement_print -> T_PRINT . T_PDERECHA expression T_PIZQUIERDA

    T_PDERECHA      shift and go to state 77


state 31

    (29) term -> T_NUMERO .
